log
Sat, Mar 22, 2025 10:00:15 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025 10:07:56 PM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       valor = i;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
dc5e91a
Sat, Mar 22, 2025 10:19:32 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c555174
Sat, Mar 22, 2025 11:51:50 PM: 
 tests:  1|4
total_score: 10/70
07a66ca
Sun, Mar 23, 2025 12:04:47 AM: 
 exercises.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
bc5cd42
Sun, Mar 23, 2025 12:25:11 AM: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
88e7602
